--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html,body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('/nature.jpeg');
+  background-image: url('nature.jpeg');
   background-color: rgba(0,0,0,0.85);
   background-size: cover;
   background-blend-mode: multiply;
